# f3rm

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
assets/: code_structure.md  datasets.md  label_demos.md
f3rm/: config.py  f3rm_config.py  feature_datamanager.py  feature_field.py  field.py  model.py  pca_colormap.py  renderer.py
f3rm/features/: clip_extract.py  dino_extract.py
f3rm/features/clip/: clip.py  model.py
f3rm/features/dino/: dino_vit_extractor.py
f3rm/scripts/: demo_clip_features.py  demo_extract_features.py  download_datasets.py
f3rm/utils/: download_datasets.py  pca_colormap.py
f3rm/viewer/: f3rm_viewer.py  load.py  utils.py
f3rm_robot/: README.md  args.py  collision.py  field_adapter.py  initial_proposals.py  load.py  optimize.py  task.py  utils.py  visualizer.py
f3rm_robot/assets/: __init__.py
f3rm_robot/assets/tasks/: caterpillar_ear.pt  mug_handle.pt  mug_lip.pt  rack_place.pt  screwdriver_handle.pt
f3rm_robot/examples/: generate_task.py  label_demos.py
f3rm_robot/ur5/: mount.urdf  notes.txt  ur5.urdf
scripts/: demo_clip_features.py  demo_extract_features.py
