[project]
name = "f3rm"
version = "0.0.1"
description = "F3RM: Feature Fields for Robotic Manipulation"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["nerf", "feature-fields", "robotics"]
authors = [
    { name = "William Shen", email = "willshen@csail.mit.edu" },
    { name = "Ge Yang", email = "geyang@csail.mit.edu" },
]

dependencies = [
    "einops",
    "ftfy",
    "matplotlib",
    "nerfstudio>=0.3.3",
    "numpy",
    "pillow",
    "regex",
    "torchtyping",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
]

[tool.black]
line-length = 120

[project.urls]
"Homepage" = "https://f3rm.csail.mit.edu"
"Source" = "https://github.com/f3rm/f3rm"

[project.entry-points."nerfstudio.method_configs"]
f3rm = "f3rm.config:f3rm_method"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"